fix: update security config to allow global cors